--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kingdom</title>
     <link rel="stylesheet" href="style.css" />
+     <link rel="icon" type="image/x-icon" href="./crown.ico">
   </head>
   <body>
     <nav>
