--- a/index.html
+++ b/index.html
@@ -155,13 +155,19 @@
         </div>
       </section>
     </main>
-    <footer>
+ <footer>
       <div class="publisher">
         <img src="./assets/noio.png" alt="" />
         <img src="./assets/rawfury.png" alt="" />
       </div>
       <div class="designer">
         <img src="./assets/logo-no-background.png" alt="" />
+      </div>
+      <div class="footer--links">
+        <a href="https://github.com/JushuaTaduran/Kingdom">Check Github</a>
+        <a href="https://main--glistening-taiyaki-2a84a1.netlify.app/"
+          >Visit Netlify</a
+        >
       </div>
     </footer>
     <script src="script.js"></script>
